--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "glsl-film-grain": "^1.0.4",
     "gsap": "npm:@gsap/shockingly",
     "locomotive-scroll": "^4.1.2",
     "node-sass": "^6.0.1",
