--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "glsl-film-grain": "^1.0.4",
-    "gsap": "npm:@gsap/shockingly",
+    "gsap": "npm:@gsap/shockingly@^3.11.5",
     "locomotive-scroll": "^4.1.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
